# Qt_Calculator

./: CMakeLists.txt  README.md
Qt_Calculator/: CMakeLists.txt  main.cpp
Qt_Calculator/Headers/: Calculate.h  DatePage.h  Headers.h  MainWindow.h  MoneyPage.h  ProgrammerPage.h  SciencePage.h  cbigmath.h  cbignum.h
Qt_Calculator/Resources/: black.css  styles.qrc  white.css
Qt_Calculator/Resources/Forms/: 1_en.ts  1_zh_cn.ts  DatePage.ui  MainWindow.ui  MoneyPage.ui  ProgrammerPage.ui  SciencePage.ui
Qt_Calculator/Resources/Translator/: en.qm  zh_cn.qm
Qt_Calculator/Sources/: Calculate.cpp  DatePage.cpp  MainWindow.cpp  MoneyPage.cpp  ProgrammerPage.cpp  SciencePage.cpp  cbigmath.cpp  cbignum.cpp
